# PassGuard

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: pull_request_template.md
.github/workflows/: ci.yml  linear-traceability.yml  pages.yml  sonarqube.yml
app/: __init__.py  main.py  schemas.py
app/services/: __init__.py  analyzer.py  lexer.py
docs/: cicd-demo-guide.md  cicd-demo-slide.html  passguard-ci-password-analysis-spec.md
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css
scripts/: deploy-smoke-test.mjs  run-ci-checks.ps1
tests/: test_analyzer.py  test_api.py  test_lexer.py
